WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2005-05-31


Version 0.1.3 (under dev!):
   * fixed crash when using Alt-S or Alt-X on DCC buffer (Alt-D)
   * fixed startup crash when config file (~/.weechat/weechat.rc) is not found
   * improved Perl/Python libs detection for ./configure script

Version 0.1.2 (2005-05-21):
   * added Python plugin support, improved Perl interface (and now Perl/Python
     libraries are checked by configure script)
   * added nicklist scroll keys (Alt+{home/end/pgup/pgdn} or F11/F12)
   * added transfer rate for DCC files
   * added "-all" option for /nick command
   * buffers timestamp can now be changed (new option in config file)
   * WeeChat now ok under *BSD and Mac OS X
   * fixed nicklist sort
   * fixed crash when purging old DCC
   * fixed crash with 64-bits arch (like AMD64) when converting UTF-8
   * added missing IRC commands (307, 341, 485, 671)

Version 0.1.1 (2005-03-20):
   * added nicks count for channel buffers
   * added FIFO pipe for remote control
   * added crash dump when WeeChat receives SIGSEGV (Segmentation fault)
   * added new display engine: doesn't cut words at end of lines
   * added DCC send and DCC chat
   * added /halfop & /dehalfop commands, fixed halfop display bug in nicklist
   * added /ban, /unban and /kickban commands
   * added spanish translation
   * added --irc-commands and --weechat-commands command line options
   * connection to IRC server is now made by child process (non blocking)
   * added support for UnrealIrcd ("~" for chan owner, "&" for chan admin)
   * new key for window switch (now: F5/F6=switch buffer, F7/F8=switch window)
   * on server buffer, only server messages are logged
   * improved /help command output
   * plugins messages are logged with new config option (log_plugin_msg)
   * fixed /kick command
   * fixed /invite command (and now invite requests are displayed)