@@ -1,10 +1,11 @@
 WeeChat - Wee Enhanced Environment for Chat
 ===========================================
 
-ChangeLog - 2005-05-31
+ChangeLog - 2005-06-15
 
 
 Version 0.1.3 (under dev!):
+   * fixed color problem with new libcurses version
    * fixed crash when using Alt-S or Alt-X on DCC buffer (Alt-D)
    * fixed startup crash when config file (~/.weechat/weechat.rc) is not found
    * improved Perl/Python libs detection for ./configure script
